# graphics_pipeline

./: .gitignore  CMakeLists.txt  LICENSE-3RD-PARTY
include/graphics_pipeline/core/model/: IModel.h  IModelParser.h
include/graphics_pipeline/core/pipeline/: FrameBuffer.h  Renderer.h
include/graphics_pipeline/core/scene/: Camera.h  Scene.h
include/graphics_pipeline/frame_buffer/: PNG.h
src/: main.cpp
